--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: Personal page
 description: wannabe neuroscientist
+markdown: redcarpet
 redcarpet:
   extensions: ["tables", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data"]
