--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: Personal page
-description: wannabe neuroscientist
+title: Personal page of Vincent K.M. Cheung
+description: aspiring scientist
 markdown: kramdown
 
   
