--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Personal page of Vincent K.M. Cheung
+title: Homepage of Vincent K.M. Cheung
 description: aspiring scientist
 markdown: kramdown
 
