--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: Homepage of Vincent K.M. Cheung
-description: aspiring scientist
+title: Vincent K.M. Cheung
+description: looking for ways to combine music and science
 markdown: kramdown
 
   
