--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Vincent K.M. Cheung
-description: looking for ways to combine music and science
+description: neuroscientist in training
 markdown: kramdown
 
   
