--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-minimal
-title: Home page of Vincent K.M. Cheung
-name: Vincent K.M. Cheung
+title: Vincent K.M. Cheung
 description: neuroscientist-in-training
 markdown: kramdown
 
