--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Vincent K.M. Cheung
 description: neuroscientist-in-training
 markdown: kramdown
