--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Vincent K.M. Cheung
+title: Vincent K.M. Cheung (張家銘)
 description: neuroscientist-in-training
 markdown: kramdown
 
