Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Vincent Ka Ming Cheung (張家銘)
 description: neuroscientist-in-training
 markdown: kramdown
